--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  padding: 1rem ;
 }
 
+input {
+  width: calc(100% - 10px);
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  height: 24px;
+}
+
+.table {
+  margin-top: 1rem;
+  border: 2px solid #ccc;
+  width: 100%;
+}
 
 svg {
   height: 10px;
