--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,15 @@ input {
   margin-top: 1rem;
   border: 2px solid #ccc;
   width: 100%;
+  font-size: 12px;
+}
+
+thead {
+  background-color: lime;
+}
+
+tr:nth-child(odd) {
+  background-color: #ccc
 }
 
 svg {
@@ -40,4 +49,22 @@ svg {
 
 .chevron-up {
   transform: rotate(180deg);
+}
+
+button {
+  border: 1px solid #222;
+  background-color: #fff;
+  padding: 8px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 4px;
+  margin: 25px 0;
+  cursor: pointer;
+  transition: ease-in-out .3s;
+}
+
+button:hover {
+  background-color: #222;
+  color: #fff;
 }
